books/projects/rac/tests/yaml_test/program_structure/multiline-comment-inside-struct-def.ref.stderr
multiline-comment-inside-struct-def.cpp:12 (0-1): syntax error, unexpected '}'
 12 | } // Error here (we check the location)
    | ^
