books/projects/rac/tests/yaml_test/program_structure/multiline-comment-inside-struct-def.cpp
// RAC begin

struct S {

  int a; /* A
            long
            comment
        */
};

int foo() {
} // Error here (we check the location)
